feat(frontend): initialize React 19 + Vite + Tailwind CSS 4 + PWA
Move DDEV config to repo root for monorepo support (docroot: backend/public).
Scaffold React 19 TypeScript app with Vite 7. Install TanStack Query v5,
React Router v7, Tailwind CSS 4 (Vite plugin), vite-plugin-pwa, Vitest.
Configure Vite dev server for DDEV integration (port 5173).

#1

--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -1,6 +1,6 @@
 name: tarot
 type: symfony
-docroot: public
+docroot: backend/public
 php_version: "8.3"
 webserver_type: nginx-fpm
 xdebug_enabled: false
@@ -11,6 +11,7 @@ database:
     version: "10.11"
 use_dns_when_possible: true
 composer_version: "2"
+composer_root: backend
 web_environment: []
 corepack_enable: false
 
