--- a/backend/.env.test
+++ b/backend/.env.test
@@ -1,3 +1,4 @@
-# define your env variables for the test env here
 KERNEL_CLASS='App\Kernel'
-APP_SECRET='$ecretf0rt3st'
+APP_SECRET='test_secret_for_testing'
+SYMFONY_DEPRECATIONS_HELPER=disabled
+DATABASE_URL="mysql://db:db@db:3306/db?serverVersion=10.11.0-MariaDB"
