--- a/backend/composer.json
+++ b/backend/composer.json
@@ -72,6 +72,7 @@
         }
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^8.6",
         "friendsofphp/php-cs-fixer": "^3.93",
         "phpstan/phpstan": "^2.1",
         "phpstan/phpstan-doctrine": "^2.0",
@@ -79,6 +80,7 @@
         "phpunit/phpunit": "^12.5",
         "symfony/browser-kit": "7.4.*",
         "symfony/css-selector": "7.4.*",
+        "symfony/http-client": "7.4.*",
         "symfony/maker-bundle": "^1.65"
     }
 }
