fix(nginx): allow .vite paths through hidden files rule
Vite serves pre-bundled deps from node_modules/.vite/deps/.
The Nginx regex blocking dotfiles (/.xxx) was returning 403
for these paths. Add .vite as an exception alongside .well-known.

--- a/.ddev/nginx_full/nginx-site.conf
+++ b/.ddev/nginx_full/nginx-site.conf
@@ -71,7 +71,7 @@ server {
     }
 
     # Prevent clients from accessing hidden files
-    location ~* /\.(?!well-known\/) {
+    location ~* /\.(?!well-known\/|vite\/) {
         deny all;
     }
 
