fix(devtools): masquer React Query DevTools en production
- Import conditionnel via import.meta.env.DEV + React.lazy :
  le code devtools est complètement éliminé du bundle prod
- Déplacement de @tanstack/react-query-devtools vers devDependencies
- Exposition du port 4173 dans DDEV pour vérifier le build prod
- Ajout des targets Makefile serve-prod et verify-build

Vérifié : 0 occurrences de ReactQueryDevtools dans le build servi
par vite preview (port 4173)

fixes #45

--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -15,6 +15,12 @@ composer_root: backend
 web_environment: []
 corepack_enable: false
 
+web_extra_exposed_ports:
+  - name: vite-preview
+    container_port: 4173
+    http_port: 4172
+    https_port: 4173
+
 web_extra_daemons:
   - name: vite
     command: bash -c 'cd /var/www/html/frontend && npm install && npm run dev'
