--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,11 @@
     "vite-plugin-pwa": "^1.2.0",
     "vitest": "^4.0.18"
   },
+  "browserslist": [
+    "chrome >= 64",
+    "last 2 versions",
+    "not dead"
+  ],
   "dependencies": {
     "@tanstack/react-query": "^5.90.20",
     "@vitejs/plugin-react": "^5.1.3",
