feat(duration): track game duration and display time statistics
Add completedAt timestamp to Game entity, set automatically on first
completion. Compute duration stats (average per game, total play time)
in StatisticsService using TIMESTAMPDIFF via beberlei/doctrineextensions.
Display live elapsed timer in InProgressBanner, game duration in GameList,
and duration metric cards on Stats and PlayerStats pages. New formatDuration
utility and useElapsedTime hook.

#23

--- a/backend/config/packages/doctrine.yaml
+++ b/backend/config/packages/doctrine.yaml
@@ -10,6 +10,9 @@ doctrine:
         use_savepoints: true
     orm:
         auto_generate_proxy_classes: true
+        dql:
+            datetime_functions:
+                TIMESTAMPDIFF: DoctrineExtensions\Query\Mysql\TimestampDiff
         enable_lazy_ghost_objects: true
         report_fields_where_declared: true
         validate_xml_mapping: true
