--- a/.ddev/.gitignore
+++ b/.ddev/.gitignore
@@ -24,6 +24,8 @@
 /providers/platform.yaml
 /providers/upsun.yaml
 /sequelpro.spf
+/share-providers/cloudflared.sh
+/share-providers/ngrok.sh
 /traefik/config/tarot.yaml
 /traefik/certs/tarot.crt
 /traefik/certs/tarot.key
