--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.90.20",
     "@vitejs/plugin-react": "^5.1.3",
+    "html-to-image": "^1.11.13",
     "lucide-react": "^0.563.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.2.4",
