chore(backend): add YAML language server schema references to configuration files

--- a/backend/config/packages/nelmio_cors.yaml
+++ b/backend/config/packages/nelmio_cors.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=../../vendor/symfony/dependency-injection/Loader/schema/services.schema.json
 nelmio_cors:
     defaults:
         allow_headers: ['Content-Type', 'Authorization']
