--- a/backend/config/packages/api_platform.yaml
+++ b/backend/config/packages/api_platform.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=../../vendor/symfony/dependency-injection/Loader/schema/services.schema.json
 api_platform:
     defaults:
         cache_headers:
