--- a/backend/config/packages/validator.yaml
+++ b/backend/config/packages/validator.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=../../vendor/symfony/dependency-injection/Loader/schema/services.schema.json
 framework:
     validation:
         # Enables validator auto-mapping support.
