chore(backend): improve configuration defaults and comments for better maintainability
- Expand and clarify comments in `doctrine.yaml` on key features such as `server_version`, `profiling_collect_backtrace`, and mappings.
- Enhance `api_platform.yaml` with detailed default settings for cache, formats, and metadata.
- Refine CORS configuration in `nelmio_cors.yaml` to ensure controlled cross-origin access with appropriate headers, methods, and origins, including regex support.

--- a/backend/config/packages/api_platform.yaml
+++ b/backend/config/packages/api_platform.yaml
@@ -1,13 +1,26 @@
 # yaml-language-server: $schema=../../vendor/symfony/dependency-injection/Loader/schema/services.schema.json
+
 api_platform:
+    # Paramètres par défaut appliqués à toutes les ressources/endpoints API Platform.
     defaults:
         cache_headers:
+            # En-têtes qui influencent la représentation renvoyée.
+            # Objectif : éviter qu’un cache partage une réponse entre formats/utilisateurs différents.
             vary: ['Content-Type', 'Authorization', 'Accept']
         extra_properties:
+            # Active des erreurs conformes à RFC 7807 (application/problem+json) côté API Platform.
             rfc_7807_compliant_errors: true
+            # "PUT standard" : un PUT remplace la ressource (plutôt qu’un merge partiel).
+            # Utile pour un comportement REST plus prévisible.
             standard_put: true
+        # API "stateless" : pas de session Symfony (auth typiquement par token).
         stateless: true
+
+    # Formats d’entrée/sortie exposés par l’API.
     formats:
+        # JSON-LD (Hydra) : format principal pour la doc/clients JSON-LD.
         jsonld: ['application/ld+json']
+
+    # Métadonnées affichées dans la documentation (OpenAPI / Swagger UI).
     title: 'Tarot API'
     version: '1.0.0'
