--- a/backend/.env
+++ b/backend/.env
@@ -16,7 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=
+APP_SECRET=change_me_in_production
 APP_SHARE_DIR=var/share
 ###< symfony/framework-bundle ###
 
