fix(backend): désactiver la session PHP en production
fixes #139

--- a/backend/config/packages/framework.yaml
+++ b/backend/config/packages/framework.yaml
@@ -9,6 +9,11 @@ framework:
     #esi: true
     #fragments: true
 
+when@prod:
+    framework:
+        session:
+            enabled: false
+
 when@test:
     framework:
         test: true
