feat(backend): add rate limiting on API endpoints
Add a sliding window rate limiter (60 req/min per IP) on all /api/
endpoints using Symfony RateLimiter component. Returns 429 with RFC
7807 JSON body when exceeded. Includes X-RateLimit-Limit,
X-RateLimit-Remaining and Retry-After headers.

#140

--- a/backend/config/packages/framework.yaml
+++ b/backend/config/packages/framework.yaml
@@ -1,6 +1,12 @@
 # yaml-language-server: $schema=../../vendor/symfony/dependency-injection/Loader/schema/services.schema.json
 # see https://symfony.com/doc/current/reference/configuration/framework.html
 framework:
+    rate_limiter:
+        api_general:
+            interval: '1 minute'
+            limit: 60
+            policy: sliding_window
+
     secret: '%env(APP_SECRET)%'
 
     # Note that the session will be started ONLY if you read or write from it.
