--- a/backend/config/packages/api_platform.yaml
+++ b/backend/config/packages/api_platform.yaml
@@ -5,18 +5,22 @@ api_platform:
     defaults:
         cache_headers:
             # En-têtes qui influencent la représentation renvoyée.
-            # Objectif : éviter qu’un cache partage une réponse entre formats/utilisateurs différents.
+            # Objectif : éviter qu'un cache partage une réponse entre formats/utilisateurs différents.
             vary: ['Content-Type', 'Authorization', 'Accept']
         extra_properties:
             # Active des erreurs conformes à RFC 7807 (application/problem+json) côté API Platform.
             rfc_7807_compliant_errors: true
-            # "PUT standard" : un PUT remplace la ressource (plutôt qu’un merge partiel).
+            # "PUT standard" : un PUT remplace la ressource (plutôt qu'un merge partiel).
             # Utile pour un comportement REST plus prévisible.
             standard_put: true
+        # Autorise le client à choisir le nombre d'éléments par page (via ?itemsPerPage=N).
+        pagination_client_items_per_page: true
+        # Plafonne le nombre d'éléments par page côté client.
+        pagination_maximum_items_per_page: 50
         # API "stateless" : pas de session Symfony (auth typiquement par token).
         stateless: true
 
-    # Formats d’entrée/sortie exposés par l’API.
+    # Formats d'entrée/sortie exposés par l'API.
     formats:
         # JSON-LD (Hydra) : format principal pour la doc/clients JSON-LD.
         jsonld: ['application/ld+json']
@@ -24,3 +28,8 @@ api_platform:
     # Métadonnées affichées dans la documentation (OpenAPI / Swagger UI).
     title: 'Tarot API'
     version: '1.0.0'
+
+when@prod:
+    api_platform:
+        enable_docs: false
+        enable_entrypoint: false
